added approach display navbar left or right

--- a/jspdocportal-module/src/main/resources/config/jspdocportal/mycore.properties
+++ b/jspdocportal-module/src/main/resources/config/jspdocportal/mycore.properties
@@ -72,3 +72,5 @@ MCR.API.Explore.FilterQuery=objectKind:mycoreobject
 #allow comma-separated list of solr fields which will be included into the response
 #e.g.state,derCount,derivates,worldReadable,doi  
 MCR.API.Explore.PayloadFields=state,worldReadable 
+
+JSP.navSide=left
